# dotsrus

./: Cargo.toml  LICENSE  README  flake copy.nix  flake.nix  init.sh
.cargo/: config.toml
.config/: .gitignore  cargo.toml  helix.toml  starship.toml
config/: .gitignore  init.sh  treefmt.toml
documentation/: LICENSE  README
scripts/: clean_string.sh  fetch-os-name.sh  init-project.sh  init.sh  pout_slant.sh
src/: main.rs
src/cli/: default.rs  mod.rs
src/cli/commands/: default.rs  mod.rs  path.rs
src/config/: data.rs  default.rs  mod.rs
src/config/modules/: config.rs  entry.rs  exclude.rs  mod.rs
src/utilities/: mod.rs  pattern_match.rs
