[package]
name = "dotsrus"
version = "0.1.0"
edition = "2021"
authors = ["Craig 'Craole' Cole <ccutils@craole.cc>"]
description = "Dots 'R' Us - Environment Management Tool"
repository = "https://github.com/Craole/dotsrus"
license = "LICENSE"
keywords = ["dotfiles", "environment", "path", "variables"]
categories = ["command-line-utilities", "config", "filesystem"]

[lints.rust]
unsafe_code = "forbid"
unused_variables = "allow"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
directories = "6.0.0"
ignore = "0.4.23"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.20"
